#1522 disable parallel processing of messages